--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,10 @@ book:
     - i_l3.qmd
     - i_l4.qmd
     - i_l5.qmd
+    - i_l6.qmd
+    - i_l7.qmd
+    - i_l8.qmd
+    - i_lshiny.qmd
     - references.qmd
 
 bibliography: references.bib
